# wasm-pong-rs

./: Cargo.toml  README.md  index.html  wasm_pong.min.wasm
pkg/: package.json  wasm_pong.d.ts  wasm_pong.js  wasm_pong_bg.d.ts  wasm_pong_bg.wasm
src/: data.rs  lib.rs  opengl.rs
