[package]
name = "wasm-pong"
version = "0.2.0"
authors = ["Teemu Erkkola <teemu.erkkola@iki.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
js-sys = "0.3.20"
glow = "0.2.2"
byte-slice-cast = "0.3.2"

[dependencies.web-sys]
version = "0.3.20"
features = [
  'AudioContext',
  'AudioBuffer',
  'AudioNode',
  'AudioBufferSourceNode',
  'AudioDestinationNode',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'Node',
  'WebGl2RenderingContext',
  'Window',
]

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
